# promptstrike

./: .gitignore  ADVANCED_UPGRADE.md  CHANGELOG.md  LICENSE  README.md  SECURITY.md  __init__.py  promptstrike.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: scan.yml
core/: __init__.py  analyzer.py  chain.py  comparator.py  connector.py  consistency.py  engine.py  evolver.py  fuzzer.py  plugin_loader.py  profiler.py  scorer.py  target_profiler.py  tokenizer.py
payloads/: context_overflow.json  data_extraction.json  encoding.json  guardrail_bypass.json  indirect.json  jailbreaks.json  multilang.json  role_escalation.json  system_leaks.json  token_smuggling.json
plugins/: __init__.py  example_plugin.py
reports/: __init__.py  html_report.py  json_report.py  markdown_report.py
tests/: __init__.py  test_core.py
utils/: __init__.py  banner.py  colors.py  config.py
