[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promptstrike"
version = "1.0.0"
description = "AI prompt injection testing framework"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Muhammad Abid", email = "v3n0msh3ll@protonmail.com"},
]
keywords = ["ai", "security", "prompt-injection", "llm", "pentesting", "red-team"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "requests>=2.28.0",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
proxy = ["pysocks>=1.7.1"]

[project.urls]
Homepage = "https://github.com/V3n0mSh3ll/promptstrike"
Issues = "https://github.com/V3n0mSh3ll/promptstrike/issues"

[project.scripts]
promptstrike = "promptstrike:main"

[tool.setuptools.packages.find]
include = ["core*", "utils*", "reports*"]

[tool.setuptools.package-data]
"*" = ["payloads/*.json"]
